Fix user routes file
