# src/main.ts
@@ -1,5 +1,6 @@
 import express from 'express';
 import authRoutes from './modules/auth/routes/auth.routes';
+import userRoutes from './modules/users/routes/user.routes';
 import errorHandler from './modules/shared/middleware/error.middleware';
 
 const app = express();
@@ -7,6 +8,7 @@ const port = process.env.PORT || 3000;
 
 app.use(express.json());
 app.use('/api/v1/auth', authRoutes);
+app.use('/api/v1/users', userRoutes);
 app.use((err: any, req: express.Request, res: express.Response) => {
   errorHandler(err, req, res);
 });
